# terminal-motor-cntrl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TerminalMotorController.c  TerminalMotorController.h  main.c  main.cpp
